<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <com.zly.zly.mediabox.MyView.ArcProgress.ArcProgress
        android:id="@+id/myProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:arcCapRound="true"
        app:borderWidth="8dp"
        app:degree="0"
        app:progressStyle="arc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myProgress"
        android:layout_centerHorizontal="true"
        android:text="@string/update_file"
        android:textAllCaps="false"
        android:textColor="@color/mainclior"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/access1"
            android:textColor="@color/text_color"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv4"
            android:gravity="center_vertical"
            android:text="@string/access2"
            android:textColor="@color/mainclior"
            android:textSize="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/retry"
            android:gravity="center_vertical"
            android:text="@string/access3"
            android:textColor="@color/text_color"
            android:textSize="15dp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_cross" />

</RelativeLayout>
