<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/nfc1"
            android:textColor="@color/mainclior"
            android:textSize="19dp" />

        <CheckBox
            android:id="@+id/checkBox"

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:paddingLeft="10dp"
            android:text="@string/after_no_longer_remind"

            android:textSize="18dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/checkBox"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:background="@mipmap/remote_on"
            android:text="@string/ok"
            android:textColor="@color/color_w"
            android:textSize="20dp" />
    </RelativeLayout>

</RelativeLayout>
