<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:context="com.zly.zly.mediabox.Ui.RemoteActivity">

    <RelativeLayout
        android:id="@+id/titr"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/mainclior">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/the_remote_control"
            android:textColor="@color/color_w"
            android:textSize="20dp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titr">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/sound_settings"
                android:textColor="@color/mainclior"
                android:textSize="20dp" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tit"
                android:background="@color/linecolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="6dp"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/rock"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/scrollView2"
                    android:layout_weight="1"
                    android:background="@mipmap/remote_off"
                    android:text="@string/rock" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/jazz"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/scrollView2"
                    android:layout_weight="1"
                    android:background="@mipmap/remote_off"
                    android:text="@string/jazz" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/fashion"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/scrollView2"
                    android:layout_weight="1"
                    android:background="@mipmap/remote_off"
                    android:text="@string/fashion" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/classics"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/scrollView2"
                    android:layout_weight="1.1"
                    android:background="@mipmap/remote_off"
                    android:text="@string/classics" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/normal"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/scrollView2"
                    android:layout_weight="1"
                    android:background="@mipmap/remote_off"
                    android:text="@string/normal" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="30dp" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
